--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/phosphor-icons"></script>
-  <script src="/JS/script.js"></script>
-  <link rel="stylesheet" href="/CSS/style.css"
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="style.css"
   <title>Document</title>
 </head>
 <body>
